# esphome-tailscale

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  example-dev-headscale.yaml  example-dev-tailscale.yaml  example-dev.yaml  example.yaml  sonar-project.properties
.github/workflows/: check-microlink-update.yml  codeql.yml  sonarcloud.yml  validate.yml
components/tailscale/: __init__.py  binary_sensor.py  button.py  microlink_stub.h  sensor.py  switch.py  tailscale.cpp  tailscale.h  telemetry.cpp  telemetry.h  text.py  text_sensor.py
contrib/headscale-test/: README.md  docker-compose.yaml
contrib/headscale-test/config/: config.yaml
docs/: ALTERNATIVES.md
docs/superpowers/plans/: 2026-05-20-tls-login-server.md
docs/superpowers/specs/: 2026-05-20-tls-login-server-design.md
idf_components/microlink/: CMakeLists.txt
idf_components/wireguard_lwip/src/: wireguard.h  wireguardif.c
include_fix/: xtensa_context.h
microlink/: .gitignore
microlink/components/microlink/: CMakeLists.txt  ml_config_override.h
microlink/components/microlink/components/wireguard_lwip/src/: wireguard-platform-esp32.c  wireguard-platform.h  wireguard.h  wireguardif.c  wireguardif.h
microlink/components/microlink/include/: microlink.h  microlink_internal.h
microlink/components/microlink/src/: microlink.c  ml_cellular.c  ml_config_httpd.c  ml_coord.c  ml_derp.c  ml_net_io.c  ml_net_switch.c  ml_netcheck.c  ml_noise.c  ml_peer_nvs.c  ml_wg_mgr.c  ml_x25519.c  ml_x25519.h  nacl_box.c
scripts/: svg_to_png.py
telemetry/: ADMIN-TABLE-FILTER-HANDOFF.md  worker.js  wrangler.toml
